# plugin_cppside

./: .gitignore  CMakeLists.txt  README.md  bootstrap_ubi7.sh  cbindgen.toml  main.cpp  shim.cxx
.devcontainer/: devcontainer.json
docs/: doc.md
dynamic_plugin/: CMakeLists.txt  adapter.h  c_interface.cpp  dynamic_plugin.cpp
include/: cells.h  fake_interface.h  lib.h  load_shared.h  local_plugin.h  plugin.h
src/: CMakeLists.txt  cells.cpp  lib.cpp  load_shared.cpp  local_plugin.cpp
tests/: CMakeLists.txt  aoc.cpp  cell_loading.cpp  directional.cpp  sample_data.cpp  simple.cpp
